--- a/index.html
+++ b/index.html
@@ -9,25 +9,18 @@
 </head>
 <body>
 <!-- partial:index.partial.html -->
-<!-- Google Fonts -->
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <div class="container">
-  <h1>10秒で連打！</h1>
+  <h1>10秒連打チャレンジ！</h1>
+  <div id="timer">準備中...</div>
   <div id="count">0</div>
-  <div id="timer">残り：10秒</div>
-
   <button id="startBtn">スタート</button>
-  <button id="tapBtn" disabled style="display: none;">押せ！</button>
-  <button id="showResultBtn" style="display: none;">結果を表示する</button>
-  <button id="restartBtn" style="display: none;">再スタート</button>
-
+  <button id="tapBtn" style="display:none;">押せ！</button>
+  <button id="showResultBtn" style="display:none;">結果を表示する</button>
   <div id="message"></div>
-
-  <h2>🏆 youの記録</h2>
-  <ol id="rankingList"></ol>
-
-  <button id="resetBtn" style="display: none; margin-top: 30px;">記録をリセット</button>
+  <button id="restartBtn" style="display:none;">再スタート</button>
+  <button id="resetBtn" style="display:none;">記録をリセット</button>
 </div>
 <!-- partial -->
   <script  src="./script.js"></script>
